[gd_scene load_steps=6 format=2]

[ext_resource path="res://player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://main/Main.gd" type="Script" id=2]
[ext_resource path="res://enemy/Enemy.tscn" type="PackedScene" id=3]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1984, 0, 0, 0, 0, 0, 1984, 1080, 0, 0, 0, 0, 0, 1080, 0, 0, 0, 0, 0, 0 )
}

[sub_resource type="TileSet" id=2]
0/name = "16tileset.png 0"
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 16, 240, 48, 48 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[node name="Main" type="Node"]
script = ExtResource( 2 )
enemy_scene = ExtResource( 3 )

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 240, 450 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 240, 450 )

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="StartTimer" type="Timer" parent="."]
one_shot = true

[node name="EnemyPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="EnemySpawnLocation" type="PathFollow2D" parent="EnemyPath"]

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 2 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 48
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
format = 1

[connection signal="hit" from="Player" to="." method="_on_Player_hit"]
[connection signal="timeout" from="EnemyTimer" to="." method="_on_EnemyTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
